jupyter changes for global variables in procedures

--- a/jupyter/CGopts.ipynb
+++ b/jupyter/CGopts.ipynb
@@ -55,7 +55,9 @@
     "   - a label\n",
     "   - an instruction, possibly with operands\n",
     "   - a target (for branch and jump instructions)\n",
-    "- `compiledProcedures` is a list of post-optimization procedure mips instructions; these will be inserted into the program after we're done all of the optimizations"
+    "- `compiledProcedures` is a list of post-optimization procedure mips instructions; these will be inserted into the program after we're done all of the optimizations\n",
+    "- `fieldVars` is a list of dicts, with the keys being the names of fields in records, and the keys being their placeholder variable names. See [`genSelect()`](#gen-select) for more details.\n",
+    "- `usedGlobalVars` is a single map of names of global variables to a boolean flag which is `True` if they are used and `False` otherwise."
    ]
   },
   {
@@ -83,13 +85,14 @@
     "def genProgStart():\n",
     "    global asm, curlev, label, regs\n",
     "    asm, curlev, label = [], 0, 0\n",
-    "    global declarations, instructions, compiledProcedures, procNames, fieldVars\n",
+    "    global declarations, instructions, compiledProcedures, procNames, fieldVars, usedGlobalVars\n",
     "    global curlev, label, vname, regs, writtenText\n",
     "    declarations = [ [] ]\n",
     "    instructions = [ [] ]\n",
     "    compiledProcedures = []\n",
     "    procNames = []\n",
     "    fieldVars = [ {} ]\n",
+    "    usedGlobalVars  = {}\n",
     "    curlev = 0\n",
     "    label = 0\n",
     "    vname = 0\n",
@@ -105,7 +108,7 @@
     "editable": true
    },
    "source": [
-    "For each global variable, `genGlobalVars(sc, start)` adds the identifier to the list of global declarations and marks it as unused. The parameter `sc` contains the top scope  with all declarations parsed so far; only variable declarations from index `start` on in the top scope are considered. As MIPS instructions are not allowed to be identifiers, all variables get `_`  as suffix to avoid a name clash."
+    "For each global variable, `genGlobalVars(sc, start)` adds the identifier to the list of global declarations and marks it as unused. The parameter `sc` contains the top scope  with all declarations parsed so far; only variable declarations from index `start` on in the top scope are considered. As MIPS instructions are not allowed to be identifiers, all variables get `_`  as suffix to avoid a name clash. We also insert an entry into the `usedGlobalVariables` map, flagging it as unused for now."
    ]
   },
   {
@@ -122,7 +125,8 @@
     "    for i in range(len(sc) - 1, start - 1, - 1):\n",
     "        if type(sc[i]) == Var:\n",
     "            sc[i].reg, sc[i].adr = R0, sc[i].name + '_'\n",
-    "            declarations[curlev].append( (sc[i].adr, sc[i].tp.size) )"
+    "            declarations[curlev].append( (sc[i].adr, sc[i].tp.size) )\n",
+    "            usedGlobalVars[sc[i].adr] = False"
    ]
   },
   {
@@ -248,10 +252,12 @@
    "outputs": [],
    "source": [
     "def deadStoreElimination():\n",
+    "    global compiledProcedures\n",
     "    instructions[curlev] = deadStoreEliminationFromBlock(instructions[curlev])\n",
     "    newCompiledProcedures = []\n",
     "    for compiledProc in compiledProcedures:\n",
-    "        newCompiledProcedures.append(deadStoreEliminationFromBlock(compiledProc))"
+    "        newCompiledProcedures.append(deadStoreEliminationFromBlock(compiledProc))\n",
+    "    compiledProcedures = newCompiledProcedures"
    ]
   },
   {
@@ -306,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `removeUnusedVariables` function detects unused variables and removes their declarations from the declarations list. Again, just like the Dead Store Elimination optimization, we currently fail to properly account for global variables which are used inside of procedures but unused in the global scope. "
+    "The `removeUnusedVariables` function detects unused variables and removes their declarations from the declarations list. Every time we encounter a variable being used, we check if it is a global variable. If so, we mark that global variable as being used. If not, we add it to the list of used variable declarations for the current scope."
    ]
   },
   {
@@ -318,7 +324,7 @@
    "outputs": [],
    "source": [
     "def removeUnusedVariables(f):\n",
-    "    global declarations, instructions\n",
+    "    global declarations, usedGlobalVars\n",
     "    currentInstructions = instructions[curlev]\n",
     "    temp = []\n",
     "    completed = []\n",
@@ -330,11 +336,14 @@
     "            name = decl[0]\n",
     "            size = decl[1]\n",
     "            if name in completed: continue\n",
-    "            if name in ins or (type(target) == str and name in target):\n",
+    "            if name in usedGlobalVars or name in ins or (type(target) == str and name in target):\n",
     "                completed.append(name)\n",
     "                s = s + size\n",
     "                realAddrs[name] = -s - 8\n",
-    "                temp.append( f(decl) )\n",
+    "                if name not in usedGlobalVars:\n",
+    "                    temp.append( f(decl) )\n",
+    "                elif not usedGlobalVars[name]:\n",
+    "                    usedGlobalVars[name] = True\n",
     "    declarations[curlev] = temp\n",
     "    return realAddrs,s"
    ]
@@ -422,6 +431,13 @@
     "    global vname\n",
     "    vname += 1\n",
     "    return '__V' + str(vname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"gen-select\"></a>"
    ]
   },
   {
