--- a/jupyter/CGopts.ipynb
+++ b/jupyter/CGopts.ipynb
@@ -80,11 +80,7 @@
    },
    "outputs": [],
    "source": [
-    "GPregs = {'$t0', '$t1', '$t2', '$t3', '$t4', '$t5', '$t6', '$t7', '$t8'}\n",
-    "\n",
     "def genProgStart():\n",
-    "    global asm, curlev, label, regs\n",
-    "    asm, curlev, label = [], 0, 0\n",
     "    global declarations, instructions, compiledProcedures, procNames, fieldVars, usedGlobalVars\n",
     "    global curlev, label, vname, regs, writtenText\n",
     "    declarations = [ [] ]\n",
@@ -124,7 +120,7 @@
     "def genGlobalVars(sc, start):\n",
     "    for i in range(len(sc) - 1, start - 1, - 1):\n",
     "        if type(sc[i]) == Var:\n",
-    "            sc[i].reg, sc[i].adr = R0, sc[i].name + '_'\n",
+    "            sc[i].adr = sc[i].name + '_'\n",
     "            declarations[curlev].append( (sc[i].adr, sc[i].tp.size) )\n",
     "            usedGlobalVars[sc[i].adr] = False"
    ]
@@ -190,7 +186,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Procedure `combineInstructions` consolidates the various arrays used to store instructions (`declarations`, `compliedProcedures`, and `instructions`) into the main `instructions` array."
    ]
@@ -199,7 +198,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -213,7 +214,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Running the available optimizations in the following order.\n",
     "1. First we eliminate unused procedures\n",
@@ -225,7 +229,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -236,7 +242,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The `deadStoreElimination` function process the global instruction block and the instructions in a procedure, looking for stores to memory locations that are unused. We do this by reading all of the instructions in reverse order, looking for writes (`sw` instructions) which are not preceding a read (`lw` instructions). If, reading in reverse order, we find a `sw` without having found a `lw`, we know that the memory location being written to never gets read from, so we can eliminate that `sw` instruction.\n",
     "\n",
@@ -247,7 +256,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -262,7 +273,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Dead store elimination looks for `sw` instructions not followed by a `lw` instruction from the same reg. \n",
     "\n",
@@ -280,7 +294,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -310,7 +326,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The `removeUnusedVariables` function detects unused variables and removes their declarations from the declarations list. Every time we encounter a variable being used, we check if it is a global variable. If so, we mark that global variable as being used. If not, we add it to the list of used variable declarations for the current scope."
    ]
@@ -319,7 +338,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -350,7 +371,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The `genDataDecl` function takes a placeholder variable declaration consisting of a tuple of `(name, size)` and translates it into the appropriate `.space` directive to preceed the program.\n",
     "\n",
@@ -361,7 +385,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -374,7 +400,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The `processProcInstructions` method accepts a dictionary with string keys and integer values. This dictionary contains an entry for each local variable used in the procedure, with the key being that variable's placeholder name, and the integer value being the amount of space that variable will occupy. \n",
     "\n",
@@ -387,7 +416,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -414,7 +445,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Procedure `newVarName()` generates a new unique variable placeholder name on each call."
    ]
@@ -423,7 +457,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -435,7 +471,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "<a id=\"gen-select\"></a>"
    ]
@@ -596,7 +635,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -608,12 +649,16 @@
     "    putMemOp('sw', LNK, SP, - parsize - 8)   # push return address\n",
     "    putOp('sub', FP, SP, parsize)            # set frame pointer\n",
     "    putOp('sub', SP, FP, '__LOCAL_' + ident) # set stack pointer to temp label, \n",
-    "                                             # which we replace and compute at the end"
+    "                                             # which we replace and compute at the end\n",
+    "    procNames.append(ident)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "For the procedure epilogue, we: \n",
     "1. add the appropriate instructions to return from the function \n",
@@ -659,7 +704,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# `CGmips` code\n",
     "The rest of the code is taken verbatim from `CGmips.py`"
@@ -692,7 +740,7 @@
     "    else: return regs.pop()\n",
     "\n",
     "def releaseReg(r):\n",
-    "    if r in GPregs: regs.add(r)"
+    "    if r not in (R0, SP, FP, LNK): regs.add(r)"
    ]
   },
   {
@@ -708,7 +756,8 @@
     "def putLab(lab, instr = ''):\n",
     "    \"\"\"Emit label lab with optional instruction; lab may be a single\n",
     "    label or a list of labels\"\"\"\n",
-    "    for l in lab[:-1]: instructions[-1].append((l, '', ''))\n",
+    "    if type(lab) == list:\n",
+    "        for l in lab[:-1]: instructions[-1].append((l, '', ''))\n",
     "        instructions[-1].append((lab[-1], instr, ''))\n",
     "    else: instructions[-1].append((lab, instr, ''))\n",
     "\n",
@@ -736,9 +785,11 @@
     "editable": true
    },
    "source": [
-    "Following procedures \"generate code\" for all P0 types by determining the size of objects and store in the `size` field.\n",
+    "Following procedures \"generate code\" for all P0 types by determining the size \n",
+    "of objects and store in the `size` field.\n",
     "- Integers and booleans occupy 4 bytes\n",
-    "- The size of a record is the sum of the sizes of its field; the offset of a field is the sum of the size of the preceding fields\n",
+    "- The size of a record is the sum of the sizes of its field; the offset of a \n",
+    "  field is the sum of the size of the preceding fields\n",
     "- The size of an array is its length times the size of the base type."
    ]
   },
@@ -857,7 +908,8 @@
     "\n",
     "def loadItemReg(x, r):\n",
     "    if type(x) == Var: \n",
-    "        putMemOp('lw', r, x.reg, x.adr); releaseReg(x.reg)\n",
+    "        putMemOp('lw', r, x.reg, x.adr)\n",
+    "        releaseReg(x.reg)\n",
     "    elif type(x) == Const:\n",
     "        testRange(x); putOp('addi', r, R0, x.val)\n",
     "    elif type(x) == Reg: # move to register r\n",
@@ -918,11 +970,10 @@
    "source": [
     "def put(cd, x, y):\n",
     "    if type(x) != Reg: x = loadItem(x)\n",
-    "    if x.reg in (R0, '$a0', '$a1', '$a2', '$a3'): # find new destination register\n",
-    "        r = x.reg; x.reg = obtainReg()\n",
+    "    if x.reg == R0: x.reg, r = obtainReg(), R0\n",
     "    else: r = x.reg # r is source, x.reg is destination\n",
     "    if type(y) == Const:\n",
-    "        testRange(y); putOp(cd, x.reg, r, y.val)\n",
+    "        testRange(y); putOp(cd, r, x.reg, y.val)\n",
     "    else:\n",
     "        if type(y) != Reg: y = loadItem(y)\n",
     "        putOp(cd, x.reg, r, y.reg); releaseReg(y.reg)\n",
@@ -951,32 +1002,16 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\"  \n",
-    "def genVar(x): # version not supporting parameters in registers\n",
-    "    if 0 < x.lev < curlev: mark('level!')\n",
+    "def genVar(x):\n",
+    "    if x.lev == 0: s = R0 # global variable at x.adr\n",
+    "    elif x.lev == curlev: s = FP # local variable, FP relative\n",
+    "    else: mark('level!'); s = R0\n",
     "    y = Var(x.tp); y.lev = x.lev\n",
     "    if type(x) == Ref: # reference is loaded into register\n",
-    "        y.reg, y.adr = obtainReg(), 0 # variable at M[y.reg]\n",
-    "        putMemOp('lw', y.reg, x.reg, x.adr)\n",
+    "        r = obtainReg(); putMemOp('lw', r, s, x.adr)\n",
+    "        y.reg, y.adr = r, 0 # variable at (y.reg)\n",
     "    elif type(x) == Var:\n",
-    "        y.reg, y.adr = x.reg, x.adr \n",
-    "    else: assert False\n",
-    "    return y\n",
-    "\"\"\"\n",
-    "def genVar(x): # version supporting parameters in registers\n",
-    "    if 0 < x.lev < curlev: mark('level!')\n",
-    "    if type(x) == Ref:\n",
-    "        y = Var(x.tp); y.lev = x.lev\n",
-    "        if x.reg in ('$a0', '$a1', '$a2', '$a3'): # reference already in register, use it\n",
-    "            y.reg, y.adr = x.reg, 0 # variable at M[y.reg]\n",
-    "        else: # reference is loaded into register\n",
-    "            y.reg, y.adr = obtainReg(), 0 # variable at M[y.reg]\n",
-    "            putMemOp('lw', y.reg, x.reg, x.adr)\n",
-    "    elif type(x) == Var:\n",
-    "        if x.reg in ('$a0', '$a1', '$a2', '$a3'): # value already in register, use it\n",
-    "            y = Reg(x.tp, x.reg) #; y.lev, x.adr = x.lev, x.adr\n",
-    "        else:\n",
-    "            y = Var(x.tp); y.lev, y.reg, y.adr = x.lev, x.reg, x.adr\n",
+    "        y.reg, y.adr = s, x.adr\n",
     "    else: assert False\n",
     "    return y"
    ]
@@ -1036,6 +1071,9 @@
     "    if op == MINUS: # subtract from 0\n",
     "        if type(x) == Var: x = loadItem(x)\n",
     "        putOp('sub', x.reg, R0, x.reg)\n",
+    "    elif op == TILDE: # `r nor s` means ~(r | s) so we use `r nor r` to get ~r\n",
+    "        if type(x) == Var: x = loadItem(x)\n",
+    "        putOp('nor', x.reg, x.reg, x.reg)\n",
     "    elif op == NOT: # switch condition and branch targets, no code\n",
     "        if type(x) != Cond: x = loadBool(x)\n",
     "        x.cond = negate(x.cond); x.labA, x.labB = x.labB, x.labA\n",
@@ -1083,6 +1121,8 @@
     "    elif op == OR: # load second operand into register\n",
     "        if type(y) != Cond: y = loadBool(y)\n",
     "        y.labB += x.labB # update branch targets\n",
+    "    elif op == AMP: y = put('and', x, y)\n",
+    "    elif op == BAR: y = put('or', x, y)\n",
     "    else: assert False\n",
     "    return y"
    ]
@@ -1134,19 +1174,18 @@
    "outputs": [],
    "source": [
     "def genAssign(x, y):\n",
-    "    if type(x) == Var:\n",
-    "        if type(y) == Cond:\n",
-    "            putBranchOp(condOp(negate(y.cond)), y.left, y.right, y.labA[0])\n",
-    "            releaseReg(y.left); releaseReg(y.right); r = obtainReg()\n",
-    "            putLab(y.labB); putOp('addi', r, R0, 1) # load true\n",
-    "            lab = newLabel()\n",
-    "            putInstr('b', lab)\n",
-    "            putLab(y.labA); putOp('addi', r, R0, 0) # load false \n",
-    "            putLab(lab)\n",
-    "        elif type(y) != Reg: y = loadItem(y); r = y.reg\n",
-    "        else: r = y.reg\n",
-    "        putMemOp('sw', r, x.reg, x.adr); releaseReg(r)\n",
-    "    else: assert False"
+    "    \"\"\"Assume x is Var, generate x := y\"\"\"\n",
+    "    if type(y) == Cond:\n",
+    "        putBranchOp(condOp(negate(y.cond)), y.left, y.right, y.labA[0])\n",
+    "        releaseReg(y.left); releaseReg(y.right); r = obtainReg()\n",
+    "        putLab(y.labB); putOp('addi', r, R0, 1) # load true\n",
+    "        lab = newLabel()\n",
+    "        putInstr('b', lab)\n",
+    "        putLab(y.labA); putOp('addi', r, R0, 0) # load false \n",
+    "        putLab(lab)\n",
+    "    elif type(y) != Reg: y = loadItem(y); r = y.reg\n",
+    "    else: r = y.reg\n",
+    "    putMemOp('sw', r, x.reg, x.adr); releaseReg(r)"
    ]
   },
   {
@@ -1170,12 +1209,12 @@
    "outputs": [],
    "source": [
     "def genFormalParams(sc):\n",
-    "    n = len(sc) # parameter block length\n",
-    "    for i in range(n):\n",
-    "        if sc[i].tp in (Int, Bool) or type(sc[i]) == Ref:\n",
-    "            sc[i].reg, sc[i].adr = FP, (n - i - 1) * 4\n",
+    "    s = 0 # parameter block size\n",
+    "    for p in reversed(sc):\n",
+    "        if p.tp == Int or p.tp == Bool or type(p) == Ref:\n",
+    "            p.adr, s = s, s + 4\n",
     "        else: mark('no structured value parameters')\n",
-    "    return n * 4"
+    "    return s"
    ]
   },
   {
