--- a/jupyter/P0.ipynb
+++ b/jupyter/P0.ipynb
@@ -218,6 +218,7 @@
     "    LE, GE, PERIOD, COMMA, COLON, RPAREN, RBRAK, OF, THEN, DO, LPAREN, \\\n",
     "    LBRAK, NOT, BECOMES, NUMBER, IDENT, SEMICOLON, END, ELSE, IF, WHILE, \\\n",
     "    ARRAY, RECORD, CONST, TYPE, VAR, PROCEDURE, BEGIN, PROGRAM, EOF, \\\n",
+    "    TILDE, AMP, BAR, \\\n",
     "    getSym, mark\n",
     "import ST  #  used for ST.init\n",
     "from ST import Var, Ref, Const, Type, Proc, StdProc, Int, Bool, Enum, \\\n",
@@ -238,16 +239,25 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-ac4bfdb8ab8b>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-ac4bfdb8ab8b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    COMMA, SEMICOLON, THEN, ELSE, RPAREN, RBRAK, DO, PERIOD, END}\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "FIRSTFACTOR = {IDENT, NUMBER, LPAREN, NOT}\n",
-    "FOLLOWFACTOR = {TIMES, DIV, MOD, AND, OR, PLUS, MINUS, EQ, NE, LT, LE, GT, GE,\n",
+    "FIRSTFACTOR = {IDENT, NUMBER, LPAREN, NOT, TILDE}\n",
+    "FOLLOWFACTOR = {TIMES, DIV, MOD, AND, OR, PLUS, MINUS, EQ, NE, LT, LE, GT, GE, AMP, BAR,\n",
     "                COMMA, SEMICOLON, THEN, ELSE, RPAREN, RBRAK, DO, PERIOD, END}\n",
-    "FIRSTEXPRESSION = {PLUS, MINUS, IDENT, NUMBER, LPAREN, NOT}\n",
+    "FIRSTEXPRESSION = {PLUS, MINUS, IDENT, NUMBER, LPAREN, NOT, TILDE}\n",
     "FIRSTSTATEMENT = {IDENT, IF, WHILE, BEGIN}\n",
     "FOLLOWSTATEMENT = {SEMICOLON, END, ELSE}\n",
     "FIRSTTYPE = {IDENT, RECORD, ARRAY, LPAREN}\n",
@@ -319,7 +329,7 @@
    "source": [
     "Procedure `factor()` parses\n",
     "\n",
-    "    factor ::= ident selector | integer | \"(\" expression \")\" | \"not\" factor.\n",
+    "    factor ::= ident selector | integer | \"(\" expression \")\" | (\"not\" | \"~\") factor.\n",
     "\n",
     "and generates code for the factor if no error is reported. If the factor is a constant, a `Const` item is returned (and code may not need to be generated); if the factor is not a constant, the location of the result is returned as determined by the code generator. "
    ]
@@ -356,6 +366,11 @@
     "        if x.tp != Bool: mark('not boolean')\n",
     "        elif type(x) == Const: x.val = 1 - x.val # constant folding\n",
     "        else: x = CG.genUnaryOp(NOT, x)\n",
+    "    elif SC.sym == TILDE:\n",
+    "        getSym(); x = factor()\n",
+    "        if x.tp != Int: mark('not an int')\n",
+    "        elif type(x) == Const: x.val = ~x.val    # constant folding\n",
+    "        else: x = CG.genUnaryOp(TILDE, x)\n",
     "    else: x = Const(None, 0)\n",
     "    return x"
    ]
@@ -369,7 +384,7 @@
    "source": [
     "Procedure `term()` parses\n",
     "\n",
-    "    term ::= factor {(\"*\" | \"div\" | \"mod\" | \"and\") factor}.\n",
+    "    term ::= factor {(\"*\" | \"div\" | \"mod\" | \"and\" | \"&\") factor}.\n",
     "\n",
     "and generates code for the term if no error is reported. If the term is a constant, a `Const` item is returned (and code may not need to be generated); if the term is not a constant, the location of the result is returned as determined by the code generator. "
    ]
@@ -386,15 +401,16 @@
    "source": [
     "def term():\n",
     "    x = factor()\n",
-    "    while SC.sym in {TIMES, DIV, MOD, AND}:\n",
+    "    while SC.sym in {TIMES, DIV, MOD, AND, AMP}:\n",
     "        op = SC.sym; getSym();\n",
     "        if op == AND and type(x) != Const: x = CG.genUnaryOp(AND, x)\n",
     "        y = factor() # x op y\n",
-    "        if x.tp == Int == y.tp and op in {TIMES, DIV, MOD}:\n",
+    "        if x.tp == Int == y.tp and op in {TIMES, DIV, MOD, AMP}:\n",
     "            if type(x) == Const == type(y): # constant folding\n",
     "                if op == TIMES: x.val = x.val * y.val\n",
     "                elif op == DIV: x.val = x.val // y.val\n",
     "                elif op == MOD: x.val = x.val % y.val\n",
+    "                elif op == AMP: x.val = x.val & y.val\n",
     "            else: x = CG.genBinaryOp(op, x, y)\n",
     "        elif x.tp == Bool == y.tp and op == AND:\n",
     "            if type(x) == Const: # constant folding\n",
@@ -413,7 +429,7 @@
    "source": [
     "Procedure `simpleExpression()` parses\n",
     "\n",
-    "    simpleExpression ::= [\"+\" | \"-\"] term {(\"+\" | \"-\" | \"or\") term}.\n",
+    "    simpleExpression ::= [\"+\" | \"-\"] term {(\"+\" | \"-\" | \"or\" | \"|\") term}.\n",
     "\n",
     "and generates code for the simple expression if no error is reported. If the simple expression is a constant, a `Const` item is returned (and code may not need to be generated); the simple expression is not constant, the location of the result is returned as determined by the code generator. "
    ]
@@ -438,14 +454,15 @@
     "        elif type(x) == Const: x.val = - x.val # constant folding\n",
     "        else: x = CG.genUnaryOp(MINUS, x)\n",
     "    else: x = term()\n",
-    "    while SC.sym in {PLUS, MINUS, OR}:\n",
+    "    while SC.sym in {PLUS, MINUS, OR, BAR}:\n",
     "        op = SC.sym; getSym()\n",
     "        if op == OR and type(x) != Const: x = CG.genUnaryOp(OR, x)\n",
     "        y = term() # x op y\n",
-    "        if x.tp == Int == y.tp and op in {PLUS, MINUS}:\n",
+    "        if x.tp == Int == y.tp and op in {PLUS, MINUS, BAR}:\n",
     "            if type(x) == Const == type(y): # constant folding\n",
     "                if op == PLUS: x.val = x.val + y.val\n",
     "                elif op == MINUS: x.val = x.val - y.val\n",
+    "                elif op == BAR: x.val = x.val | y.val\n",
     "            else: x = CG.genBinaryOp(op, x, y)\n",
     "        elif x.tp == Bool == y.tp and op == OR:\n",
     "            if type(x) == Const: # constant folding\n",
@@ -904,7 +921,6 @@
     "    elif target == 'ast': import CGast as CG\n",
     "    elif target == 'opt': import CGopts as CG\n",
     "    else: print('unknown target'); return\n",
-    "    print('using target: ' + target)\n",
     "    SC.init(src)\n",
     "    ST.init()\n",
     "    p = program()\n",
