--- a/jupyter/SC.ipynb
+++ b/jupyter/SC.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## P0 Scanner\n",
     "#### Original Author: Emil Sekerinski, February 2017\n",
@@ -18,7 +21,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -29,12 +34,16 @@
     "BECOMES = 25; NUMBER = 26; IDENT = 27; SEMICOLON = 28\n",
     "END = 29; ELSE = 30; IF = 31; WHILE = 32; ARRAY = 33\n",
     "RECORD = 34; CONST = 35; TYPE = 36; VAR = 37; PROCEDURE = 38\n",
-    "BEGIN = 39; PROGRAM = 40; EOF = 41"
+    "BEGIN = 39; PROGRAM = 40; EOF = 41\n",
+    "TILDE = 42; AMP = 43; BAR = 44;"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Following variables determine the state of the scanner:\n",
     "- `(line, pos)` is the location of the current symbol in source\n",
@@ -53,7 +62,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -68,7 +79,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Procedure `getChar()` assigns the next character in `ch`, or assigns `chr(0)` at the end of the source. Variables `line`, `pos` are updated with the current location in the source and `lastline`, `lastpos` are updated with the location of the previously read character."
    ]
@@ -77,7 +91,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -95,7 +111,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Procedure `mark(msg)` prints an error message with the current location in the source. To avoid a cascade of errors, only one error message at a source location is printed."
    ]
@@ -104,7 +123,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -117,7 +138,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Procedure `number()` parses\n",
     "\n",
@@ -132,7 +156,9 @@
    "execution_count": null,
    "metadata": {
     "code_folding": [],
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -148,7 +174,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Procedure `identKW()` parses\n",
     "\n",
@@ -167,7 +196,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -188,7 +219,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Procedure `comment()` parses\n",
     "\n",
@@ -201,7 +235,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -213,14 +249,49 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "Procedure `single_comment()` parses\n",
+    "\n",
+    "    comment = '/' '/' {character} '\\n'\n",
+    "    \n",
+    "If a comment is not terminated, an error is reported, otherwise the comment is skipped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def single_comment():\n",
+    "    getChar()\n",
+    "    if ch != '/': mark('invalid character')\n",
+    "    while chr(0) != ch != '\\n': getChar()\n",
+    "    if ch == chr(0): mark('comment not terminated')\n",
+    "    else: getChar()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Procedure `getSym()` parses\n",
     "\n",
     "    symbol ::=\n",
-    "        {blank} (identKW | number | comment | '*' | '+' | '-' | '=' |\n",
+    "        {blank} (identKW | number | comment | single_comment | '*' | '+' | '-' | '=' |\n",
     "        '<' | '<=' | '>' | '>=' | ';' | ',' | ':' | '=' | '.' | '(' |\n",
-    "        ')' | '[' | ']')\n",
+    "        ')' | '[' | ']' | '~' | '&' | '|'\n",
     "    blank ::= chr(0) | ... | \" \"\n",
     "\n",
     "If a valid symbol is recognized, `sym` is set accordingly, otherwise an error is reported. The longest match is used for recognizing operators. Blanks are skipped. At the end of the source, `sym` is set to `EOF`."
@@ -230,7 +301,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -240,6 +313,7 @@
     "    if 'A' <= ch <= 'Z' or 'a' <= ch <= 'z': identKW()\n",
     "    elif '0' <= ch <= '9': number()\n",
     "    elif ch == '{': comment(); getSym()\n",
+    "    elif ch == '/': single_comment(); getSym()\n",
     "    elif ch == '*': getChar(); sym = TIMES\n",
     "    elif ch == '+': getChar(); sym = PLUS\n",
     "    elif ch == '-': getChar(); sym = MINUS\n",
@@ -264,13 +338,19 @@
     "    elif ch == ')': getChar(); sym = RPAREN\n",
     "    elif ch == '[': getChar(); sym = LBRAK\n",
     "    elif ch == ']': getChar(); sym = RBRAK\n",
+    "    elif ch == '~': getChar(); sym = TILDE\n",
+    "    elif ch == '&': getChar(); sym = AMP\n",
+    "    elif ch == '|': getChar(); sym = BAR\n",
     "    elif ch == chr(0): sym = EOF\n",
     "    else: mark('illegal character'); getChar(); sym = None"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Appendix"
    ]
@@ -279,7 +359,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
