--- a/jupyter/ST.ipynb
+++ b/jupyter/ST.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "class Bool: pass\n",
     "\n",
-    "class Enum: pass # for adding enumeration types\n",
+    "class Enum: pass # Used for adding enumeration types\n",
     "\n",
     "class Record:\n",
     "    def __init__(self, fields):\n",
