Jupyter Notebook removeUnusedProcedures and recursiveProcedureSearch

--- a/jupyter/CGopts.ipynb
+++ b/jupyter/CGopts.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -236,8 +236,70 @@
    "outputs": [],
    "source": [
     "def runOptimizations():\n",
+    "    removeUnusedProcedures()\n",
     "    deadStoreElimination()\n",
     "    removeUnusedVariables(genDataDecl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `removeUnusedProcedures` function process the global instruction block, looking for any subroutines. We do this by reading all of the instructions in order, looking for jump and links (`jal` instructions). If we find a `jal`, we know that the memory location of the linked procedure gets read and therefore, must be maintained.\n",
+    "\n",
+    "Due to the possibility of subroutines accessing other subroutines, as we find a `jal` in the global instruction block, we must also recursively search each nested procedure instructions for additional jump and links via the `recursiveProcedureSearch` function.\n",
+    "\n",
+    "Once we have finished processing the global instruction block, we can eliminate all procedures that are never accessed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def removeUnusedProcedures():\n",
+    "    global instructions, compiledProcedures\n",
+    "    currentInstructions = instructions[curlev]\n",
+    "    procedureNames = []\n",
+    "    temp = []\n",
+    "    for i in range(len(currentInstructions)):\n",
+    "        (l,ins,target) = currentInstructions[i]   \n",
+    "        if (ins == 'jal'):\n",
+    "            recursiveProcedureSearch(procedureNames, temp, target)\n",
+    "    compiledProcedures = temp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar to `removeUnusedProcedures`, the `recursiveProcedureSearch` function process the procedure instructions block, looking for any additional subroutines. We do this by reading all of the instructions of the current procedure in order, looking for jump and links (`jal` instructions). If we find a `jal`, we know that the memory location of the linked procedure also gets read and therefore, must be maintained.\n",
+    "\n",
+    "Due to the possibility of subroutines accessing other subroutines, as we find a `jal` in the global instruction block, we must also recursively search each nested procedure instructions for additional jump and links via the `recursiveProcedureSearch` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def recursiveProcedureSearch(procedureNames, temp, target):\n",
+    "    for procedure in range(len(compiledProcedures)):\n",
+    "        searchCurrentProcedure = False\n",
+    "        for line in range(len(compiledProcedures[procedure])):\n",
+    "            if (line == 2 and compiledProcedures[procedure][line][0] == target):\n",
+    "                if compiledProcedures[procedure][line][0] not in procedureNames:\n",
+    "                    procedureNames.append(compiledProcedures[procedure][line][0])\n",
+    "                    temp.append(compiledProcedures[procedure])\n",
+    "                    searchCurrentProcedure = True\n",
+    "            if (searchCurrentProcedure and compiledProcedures[procedure][line][1] == 'jal'):\n",
+    "                recursiveProcedureSearch(procedureNames, temp, compiledProcedures[procedure][line][2])"
    ]
   },
   {
@@ -1380,7 +1442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
