--- a/jupyter/P0test.ipynb
+++ b/jupyter/P0test.ipynb
@@ -13,14 +13,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing Jupyter notebook from P0.ipynb\n",
+      "importing Jupyter notebook from SC.ipynb\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "div.prompt {display:none}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing Jupyter notebook from ST.ipynb\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "div.prompt {display:none}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import nbimporter\n",
     "from P0 import compileString\n",
@@ -29,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -40,33 +84,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing Jupyter notebook from CGopts.ipynb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:An unexpected error occurred while tokenizing input\n",
-      "The following traceback may be corrupted or invalid\n",
-      "The error message is: ('EOF in multi-line string', (1, 4))\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-c928fa8287ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m       \u001b[0mend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m     \"\"\", target=target)\n\u001b[0m",
-      "\u001b[0;32m/Users/mustafa/Google Drive/Year 4/SFWR ENG 4TB3/Project/jupyter/P0.ipynb\u001b[0m in \u001b[0;36mcompileString\u001b[0;34m(src, dstfn, target)\u001b[0m\n",
-      "\u001b[0;32m/Users/mustafa/Google Drive/Year 4/SFWR ENG 4TB3/Project/jupyter/P0.ipynb\u001b[0m in \u001b[0;36mprogram\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m/Users/mustafa/Google Drive/Year 4/SFWR ENG 4TB3/Project/jupyter/P0.ipynb\u001b[0m in \u001b[0;36mdeclarations\u001b[0;34m(allocVar)\u001b[0m\n",
-      "\u001b[0;32m/Users/mustafa/Google Drive/Year 4/SFWR ENG 4TB3/Project/jupyter/CGopts.ipynb\u001b[0m in \u001b[0;36mgenProcExit\u001b[0;34m(x, parsize, localsize)\u001b[0m\n",
-      "\u001b[0;32m/Users/mustafa/Google Drive/Year 4/SFWR ENG 4TB3/Project/jupyter/CGopts.ipynb\u001b[0m in \u001b[0;36mprocessProcInstructions\u001b[0;34m(realAddrs, size)\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "\t.data\n",
+      "\t.text\n",
+      "\t.globl q\n",
+      "\t.ent q\n",
+      "q:\t\n",
+      "\tsub $fp, $sp, 4\n",
+      "\tsub $sp, $fp, 16\n",
+      "\taddi $t6, $0, 1\n",
+      "\taddi $t2, $0, 9\n",
+      "\taddi $t8, $0, 5\n",
+      "\taddi $t0, $0, 2\n",
+      "\tadd $sp, $fp, 4\n",
+      "\tlw $ra, -8($fp)\n",
+      "\tlw $fp, -4($fp)\n",
+      "\tjr $ra\n",
+      "\t.globl main\n",
+      "\t.ent main\n",
+      "main:\t\n",
+      "\taddi $t4, $0, 9\n",
+      "\taddi $t1, $0, 5\n",
+      "\taddi $t3, $0, 10\n",
+      "\tsw $t3, c_\n",
+      "\tlw $t5, c_\n",
+      "\tadd $t5, $t5, 1\n",
+      "\tsw $t5, c_\n",
+      "\tlw $a0, c_\n",
+      "\tli $v0, 1\n",
+      "\tsyscall\n",
+      "\tla $t7, c_\n",
+      "\tjal, q\n",
+      "\tli $v0, 10\n",
+      "\tsyscall\n",
+      "\t.end main\n"
      ]
     }
    ],
@@ -101,12 +151,120 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t.data\n",
+      "\t.text\n",
+      "\t.globl q\n",
+      "\t.ent q\n",
+      "q:\t\n",
+      "\tsub $fp, $sp, 4\n",
+      "\tsub $sp, $fp, 12\n",
+      "\taddi $t1, $0, 9\n",
+      "\tsw $t1, -12($fp)\n",
+      "\tlw $t3, -12($fp)\n",
+      "\tjal, qx\n",
+      "\tlw $t5, -12($fp)\n",
+      "\tlw $t7, 0($fp)\n",
+      "\tble $t5, $t7, L1\n",
+      "L2:\t\n",
+      "\tlw $a0, -12($fp)\n",
+      "\tli $v0, 1\n",
+      "\tsyscall\n",
+      "\tb, L3\n",
+      "L1:\t\n",
+      "\tlw $a0, g_\n",
+      "\tli $v0, 1\n",
+      "\tsyscall\n",
+      "L3:\t\n",
+      "\tadd $sp, $fp, 4\n",
+      "\tlw $ra, -8($fp)\n",
+      "\tlw $fp, -4($fp)\n",
+      "\tjr $ra\n",
+      "\t.globl qx\n",
+      "\t.ent qx\n",
+      "qx:\t\n",
+      "\tsub $fp, $sp, 4\n",
+      "\tsub $sp, $fp, 12\n",
+      "\taddi $t2, $0, 9\n",
+      "\tsw $t2, -12($fp)\n",
+      "\tlw $t8, -12($fp)\n",
+      "\tjal, q\n",
+      "\tadd $sp, $fp, 4\n",
+      "\tlw $ra, -8($fp)\n",
+      "\tlw $fp, -4($fp)\n",
+      "\tjr $ra\n",
+      "\t.globl main\n",
+      "\t.ent main\n",
+      "main:\t\n",
+      "\taddi $t8, $0, 5\n",
+      "\taddi $t0, $0, 7\n",
+      "\tjal, q\n",
+      "\tli $v0, 10\n",
+      "\tsyscall\n",
+      "\t.end main\n"
+     ]
+    }
+   ],
+   "source": [
+    "target = 'opt' if 1 else 'mips'\n",
+    "compileString(\"\"\"program p;\n",
+    "  var g: integer;          {global variable}\n",
+    "  procedure q(v: integer); {value parameter}\n",
+    "    var l: integer;        {local variable}\n",
+    "    procedure qx(v: integer); {value parameter}\n",
+    "      var l: integer;        {local variable}\n",
+    "      procedure qxt(v: integer); {value parameter}\n",
+    "        var l: integer;        {local variable}\n",
+    "        begin\n",
+    "          l := 9\n",
+    "        end;\n",
+    "      begin\n",
+    "        l := 9;\n",
+    "        q(l)\n",
+    "      end;\n",
+    "    procedure qc(v: integer); {value parameter}\n",
+    "      var l: integer;        {local variable}\n",
+    "      begin\n",
+    "        l := 9;\n",
+    "        q(l)\n",
+    "      end;\n",
+    "    begin\n",
+    "      l := 9;\n",
+    "      qx(l);\n",
+    "      if l > v then\n",
+    "         write(l)\n",
+    "      else\n",
+    "         write(g)\n",
+    "    end;\n",
+    "  procedure x(v: integer); {value parameter}\n",
+    "    var l: integer;        {local variable}\n",
+    "    begin\n",
+    "      l := 9;\n",
+    "      q(l)\n",
+    "    end;\n",
+    "  begin\n",
+    "    g := 5;\n",
+    "    q(7)\n",
+    "  end\n",
+    "\"\"\", target=target)"
+   ]
   }
  ],
  "metadata": {
@@ -125,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
